--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -506,13 +506,13 @@ boto==2.49.0 # LEVEL_01 # Amazon Web Services Library
 jupyter-bokeh==3.0.4 # LEVEL_09 # A Jupyter extension for rendering Bokeh content
 jupyter==1.0.0 # LEVEL_09 # Jupyter metapackage. Install all the Jupyter components in one go
 jupyterlab==3.2.8 # LEVEL_08 # JupyterLab computational environment
-jupyter-server-proxy==3.2.0 # LEVEL_07 # Jupyter server extension to supervise and proxy web services
+jupyter-server-proxy==3.2.1 # LEVEL_07 # Jupyter server extension to supervise and proxy web services
 jupyterlab-server==2.10.3 # LEVEL_07 # A set of server components for JupyterLab and JupyterLab like applications
 jupyter-dash==0.4.0 # LEVEL_06 # Dash support for the Jupyter notebook interface
 jupyter-server==1.13.4 # LEVEL_06 # The backend—i.e. core services, APIs, and REST endpoints—to Jupyter web applications
 jupyter-console==6.4.0 # LEVEL_06 # Jupyter terminal console
 jupyter-packaging==0.11.1 # LEVEL_04 # Jupyter Packaging Utilities
-jupyter-client==7.1.1 # LEVEL_03 # Jupyter protocol implementation and client libraries
+jupyter-client==7.1.2 # LEVEL_03 # Jupyter protocol implementation and client libraries
 jupyter-core==4.9.1 # LEVEL_02 # Jupyter core package. A base package on which Jupyter projects rely
 jupyterlab-pygments==0.1.2 # LEVEL_02 # Pygments theme using JupyterLab CSS variables
 jupyterlab-widgets==1.0.2 # LEVEL_01 # A JupyterLab extension
@@ -520,9 +520,9 @@ jupyterlab-widgets==1.0.2 # LEVEL_01 # A JupyterLab extension
 ipywidgets==7.6.5 # LEVEL_08 # IPython HTML widgets for Jupyter
 widgetsnbextension==3.5.2 # LEVEL_07 # IPython HTML widgets for Jupyter
 nbclassic==0.3.5 # LEVEL_07 # Jupyter Notebook as a Jupyter Server extension
-notebook==6.4.7 # LEVEL_06 # A web-based notebook environment for interactive computing
+notebook==6.4.8 # LEVEL_06 # A web-based notebook environment for interactive computing
 nbsphinx==0.8.8 # LEVEL_06 # Jupyter Notebook Tools for Sphinx
-nbconvert==6.4. # LEVEL_05 # Converting Jupyter Notebooks
+nbconvert==6.4.1 # LEVEL_05 # Converting Jupyter Notebooks
 qtconsole==5.2.2 # LEVEL_06 # Jupyter Qt console
 ipykernel==6.7.0 # LEVEL_05 # IPython Kernel for Jupyter
 nbclient==0.5.10 # LEVEL_04 # A client library for executing notebooks. Formerly nbconvert's ExecutePreprocessor
@@ -543,7 +543,7 @@ Django==4.0.1 # LEVEL_02 # A high-level Python web framework that encourages rap
 #
 # ASGI
 #
-asgiref==3.4.1 # LEVEL_01 # ASGI specs, helper code, and adapters
+asgiref==3.5.0 # LEVEL_01 # ASGI specs, helper code, and adapters
 starlette==0.17.1 # LEVEL_03 # The little ASGI library that shines
 uvicorn==0.17.0 # LEVEL_02 # The lightning-fast ASGI server
 #
@@ -580,7 +580,7 @@ pydata-sphinx-theme==0.8.0 # LEVEL_04 # Bootstrap-based Sphinx theme from the Py
 sphinx-autobuild==2021.3.14 # LEVEL_04 # Rebuild Sphinx documentation on changes, with live-reload in the browser
 sphinx-rtd-theme==1.0.0 # LEVEL_04 # Read the Docs theme for Sphinx
 sphinx-panels==0.6.0 # LEVEL_04 # A sphinx extension for creating panels in a grid layout
-sphinx-autodoc-typehints==1.15.3 # LEVEL_04 # Type hints (PEP 484) support for the Sphinx autodoc extension
+sphinx-autodoc-typehints==1.16.0 # LEVEL_04 # Type hints (PEP 484) support for the Sphinx autodoc extension
 Sphinx==4.4.0 # LEVEL_03 # Python documentation generator
 sphinx-markdown-tables==0.0.15 # LEVEL_04 # A Sphinx extension for rendering tables written in markdown
 sphinxcontrib-applehelp==1.0.2 # LEVEL_01 # sphinxcontrib-applehelp is a sphinx extension which outputs Apple help books
@@ -616,12 +616,12 @@ mypy==0.931 # LEVEL_02 # Optional static typing for Python
 mypy-extensions==0.4.3 # LEVEL_01 # Experimental type system extensions for programs checked with the mypy typechecker
 autopep8==1.6.0 # LEVEL_02 # using fix_file # A tool that automatically formats Python code to conform to the PEP 8 style guide
 memory-profiler==0.60.0 # LEVEL_02 # A module for monitoring memory usage of a python program
-mccabe==0.6.1 # LEVEL_01 # McCabe checker, plugin for flake8
 typeguard==2.13.3 # LEVEL_01 # Run-time type checker for Python
 pyflakes==2.4.0 # LEVEL_01 # required by flake8 # passive checker of Python programs
 pycodestyle==2.8.0 # LEVEL_01 # Python style guide checker
 py-spy==0.3.11 # LEVEL_01 # Sampling profiler for Python programs
 stack-data==0.1.4 # LEVEL_03 # Extract data from python stack frames and tracebacks for informative displays
+mccabe==0.6.1 # LEVEL_01 # McCabe checker, plugin for flake8
 #
 
 # Markdown
@@ -641,7 +641,7 @@ pipx==1.0.0 # LEVEL_03 # Install and Run Python Applications in Isolated Environ
 docker==5.0.3 # LEVEL_03 # A Python library for the Docker Engine API
 docker-pycreds==0.4.0 # LEVEL_02 # Python bindings for the docker credentials store API
 pyinstaller==4.8 # LEVEL_03 # PyInstaller bundles a Python application and all its dependencies into a single package
-pyinstaller-hooks-contrib==2021.5 # LEVEL_01 # deployment # Community maintained hooks for PyInstaller
+pyinstaller-hooks-contrib==2022.0 # LEVEL_01 # deployment # Community maintained hooks for PyInstaller
 
 # Packages
 importlib-resources==5.4.0 # LEVEL_02 # Read resources from Python packages
@@ -649,7 +649,7 @@ packaging==21.3 # LEVEL_02 # Core utilities for Python packages
 entrypoints==0.3 # LEVEL_01 # Discover and load entry points from installed packages
 
 # Locking
-fasteners==0.17.2 # LEVEL_01 # A python package that provides useful locks
+fasteners==0.17.3 # LEVEL_01 # A python package that provides useful locks
 filelock==3.4.2 # LEVEL_01 # A platform independent file lock
 lockfile==0.12.2 # LEVEL_01 # Platform-independent file locking module
 locket==0.2.1 # LEVEL_01 # File-based locks for Python for Linux and Windows
@@ -692,7 +692,7 @@ luigi==3.0.3 # LEVEL_03 # Workflow mgmgt + task scheduling + dependency resoluti
 python-daemon==2.3.0 # LEVEL_02 # Library to implement a well-behaved Unix daemon process
 #
 funcy==1.17 # LEVEL_01 # A fancy and practical functional tools
-multimethod==1.6 # LEVEL_01 # Multiple argument dispatching
+multimethod==1.7 # LEVEL_01 # Multiple argument dispatching
 
 
 #
@@ -704,7 +704,7 @@ aiodns==3.0.0 # LEVEL_04 # Simple DNS resolver for asyncio
 aiohttp-socks==0.7.1 # LEVEL_04 # Proxy connector for aiohttp
 pycocotools==2.0.4 # LEVEL_04 # Official APIs for the MS-COCO dataset
 #
-aenum==3.1.6 # LEVEL_01 # Advanced Enumerations (compatible with Python's stdlib Enum), NamedTuples, and NamedConstants
+aenum==3.1.8 # LEVEL_01 # Advanced Enumerations (compatible with Python's stdlib Enum), NamedTuples, and NamedConstants
 aiohttp==3.8.1 # LEVEL_03 # Async http client/server framework (asyncio)
 async-timeout==4.0.2 # LEVEL_01 # Timeout context manager for asyncio programs
 aioredis==2.0.1 # 1.3.1 # LEVEL_02 # asyncio (PEP 3156) Redis support
@@ -723,10 +723,10 @@ catalogue==2.0.6 # LEVEL_01 # Super lightweight function registries for your lib
 cchardet==2.1.7 # LEVEL_01 # cChardet is high speed universal character encoding detector
 cffi==1.15.0 # LEVEL_02 # Foreign Function Interface for Python calling C code
 chardet==4.0.0 # LEVEL_01 # Universal encoding detector for Python 2 and 3
-charset-normalizer==2.0.10 # LEVEL_01 # The Real First Universal Charset Detector. Open, modern and actively maintained alternative to Chardet
+charset-normalizer==2.0.11 # LEVEL_01 # The Real First Universal Charset Detector. Open, modern and actively maintained alternative to Chardet
 cloudpickle==2.0.0 # LEVEL_01 # Extended pickling support for Python objects
 codemod==1.0.0 # LEVEL_01 # Codemod is a tool/library to assist you with large-scale codebase refactors that can be partially automated but still require human oversight and occasional intervention. Codemod was developed at Facebook and released as open source
-coverage==6.2 # LEVEL_01 # Code coverage measurement for Python
+coverage==6.3 # LEVEL_01 # Code coverage measurement for Python
 croniter==1.2.0 # LEVEL_03 # croniter provides iteration for datetime object with cron like format
 cycler==0.11.0 # LEVEL_01 # Composable style cycles
 cymem==2.0.6 # LEVEL_01 # Manage calls to calloc/free through Cython
@@ -763,7 +763,7 @@ lxml==4.7.1 # LEVEL_01 # Powerful and Pythonic XML processing library combining 
 m3u8==1.0.0 # LEVEL_02 # play list parser, udemy-dl2 # Python m3u8 parser
 macholib==1.15.2 # LEVEL_02 # Mach-O header analysis and editing
 msgpack==1.0.3 # LEVEL_01 # MessagePack (de)serializer
-multidict==5.2.0 # LEVEL_01 # multidict implementation
+multidict==6.0.2 # LEVEL_01 # multidict implementation
 multipledispatch==0.6.0 # LEVEL_02 # Multiple dispatch
 multiprocess==0.70.12.2 # LEVEL_02 # better multiprocessing and multithreading in python
 multitasking==0.0.10 # LEVEL_01 # Non-blocking Python methods using decorators
@@ -823,7 +823,7 @@ statsmodels==0.13.1 # LEVEL_04 # Statistical computations and models for Python
 stdlib-list==0.8.0 # LEVEL_01 # A list of Python Standard Libraries (2.6-7, 3.2-9)
 tabulate==0.8.9 # LEVEL_01 # Pretty-print tabular data
 tblib==1.7.0 # LEVEL_01 # Traceback serialization library
-terminado==0.12.1 # LEVEL_02 # Tornado websocket backend for the Xterm.js Javascript terminal emulator library
+terminado==0.13.1 # LEVEL_02 # Tornado websocket backend for the Xterm.js Javascript terminal emulator library
 testpath==0.5.0 # LEVEL_01 # Test utilities for code working with files and commands
 text-unidecode==1.3 # LEVEL_01 # The most basic Text::Unidecode port
 threadpoolctl==3.0.0 # LEVEL_01 # threadpoolctl
