--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -362,7 +362,7 @@ tda-api==1.5 # LEVEL_06 # An unofficial wrapper around the TD Ameritrade HTTP AP
 pyfolio==0.9.2 # LEVEL_06 # https://github.com/quantopian/pyfolio ; https://www.quantopian.com/docs/user-guide/tools/pyfolio # pyfolio is a Python library for performance and risk analysis of financial portfolios
 empyrical==0.5.5 # LEVEL_05 # empyrical is a Python library with performance and risk statistics commonly used in quantitative finance
 pandas-finance==0.1.2 # LEVEL_05 # High level API for access to and analysis of financial data
-pandas-market-calendars==3.2 # LEVEL_05 # Market and exchange trading calendars for pandas
+pandas-market-calendars==3.3 # LEVEL_05 # Market and exchange trading calendars for pandas
 finta==1.3 # LEVEL_04 # Common financial technical indicators implemented in Pandas
 exchange-calendars==3.5.1 # LEVEL_04 # exchange_calendars is a Python library with securities exchange calendars
 alpha-vantage==2.3.1 # LEVEL_04 # Python module to get stock data from the Alpha Vantage Api
@@ -544,8 +544,8 @@ Django==4.0.1 # LEVEL_02 # A high-level Python web framework that encourages rap
 # ASGI
 #
 asgiref==3.5.0 # LEVEL_01 # ASGI specs, helper code, and adapters
-starlette==0.17.1 # LEVEL_03 # The little ASGI library that shines
-uvicorn==0.17.0 # LEVEL_02 # The lightning-fast ASGI server
+starlette==0.18.0 # LEVEL_03 # The little ASGI library that shines
+uvicorn==0.17.1 # LEVEL_02 # The lightning-fast ASGI server
 #
 #
 # Flask
@@ -612,6 +612,7 @@ cssselect2==0.4.1 # LEVEL_03 # cssselect2
 pytest-asyncio==0.17.2 # LEVEL_04 # Pytest support for asyncio
 pytest==6.2.5 # LEVEL_03 # pytest: simple powerful testing with Python
 flake8==4.0.1 # LEVEL_02 # better linter than pyflakes # the modular source code checker: pep8 pyflakes and co
+mccabe==0.6.1 # LEVEL_01 # LOCKED ? # McCabe checker, plugin for flake8
 mypy==0.931 # LEVEL_02 # Optional static typing for Python
 mypy-extensions==0.4.3 # LEVEL_01 # Experimental type system extensions for programs checked with the mypy typechecker
 autopep8==1.6.0 # LEVEL_02 # using fix_file # A tool that automatically formats Python code to conform to the PEP 8 style guide
@@ -621,7 +622,6 @@ pyflakes==2.4.0 # LEVEL_01 # required by flake8 # passive checker of Python prog
 pycodestyle==2.8.0 # LEVEL_01 # Python style guide checker
 py-spy==0.3.11 # LEVEL_01 # Sampling profiler for Python programs
 stack-data==0.1.4 # LEVEL_03 # Extract data from python stack frames and tracebacks for informative displays
-mccabe==0.6.1 # LEVEL_01 # McCabe checker, plugin for flake8
 #
 
 # Markdown
@@ -632,7 +632,7 @@ markdown2==2.4.2 # LEVEL_01 # A fast and complete Python implementation of Markd
 # HTML scraping, sanitizing, minimizing
 beautifulsoup4==4.10.0 # LEVEL_02 # Screen-scraping library
 bleach==4.1.0 # LEVEL_03 # An easy safelist-based HTML-sanitizing tool
-ansi2html==1.6.0 # LEVEL_01
+ansi2html==1.7.0 # LEVEL_01
 MarkupSafe==2.0.1 # LEVEL_01 # Safely add untrusted strings to HTML/XML markup
 htmlmin==0.1.12 # LEVEL_01 # An HTML Minifier
 
@@ -685,7 +685,7 @@ pydeps==1.10.12 # LEVEL_02 # cd src/main; pydeps .; open main.svg # Display modu
 importlab==0.7 # LEVEL_02 # A library to calculate python dependency graphs
 ninja==1.10.2.3 # LEVEL_01 # Ninja is a small build system with a focus on speed
 #
-userpath==1.7.0 # LEVEL_02 # Cross-platform tool for adding locations to the user PATH, no elevated privileges required!
+userpath==1.8.0 # LEVEL_02 # Cross-platform tool for adding locations to the user PATH, no elevated privileges required!
 argcomplete==2.0.0 # LEVEL_01 # Bash tab completion for argparse
 #
 luigi==3.0.3 # LEVEL_03 # Workflow mgmgt + task scheduling + dependency resolution
@@ -832,7 +832,7 @@ tomlkit==0.8.0 # LEVEL_01 # Style preserving TOML library
 tornado==6.1 # LEVEL_01 # Tornado is a Python web framework and asynchronous networking library, originally developed at FriendFeed
 tqdm==4.62.3 # LEVEL_01 # Fast, Extensible Progress Meter
 traitlets==5.1.1 # LEVEL_01 # Traitlets Python configuration system
-typed-ast==1.5.1 # LEVEL_01 # a fork of Python 2 and 3 ast modules with type comment support
+typed-ast==1.5.2 # LEVEL_01 # a fork of Python 2 and 3 ast modules with type comment support
 typer==0.4.0 # LEVEL_02 # Typer, build great CLIs. Easy to code. Based on Python type hints
 typing-inspect==0.7.1 # LEVEL_02 # Runtime inspection utilities for typing module
 ua-parser==0.10.0 # LEVEL_01 # Python port of Browserscope's user agent parser
@@ -878,7 +878,7 @@ click==8.0.3 # LEVEL_01 # Composable command line interface toolkit
 # Resolve below
 #
 #streamlit # has some dependencies !!
-tbb==2021.5.0 # LEVEL_01 # Intel® oneAPI Threading Building Blocks (oneTBB)
+tbb==2021.5.1 # LEVEL_01 # Intel® oneAPI Threading Building Blocks (oneTBB)
 tiledb==0.12.1 # LEVEL_03 # Pythonic interface to the TileDB array storage manager
 xarray==0.21.0 # LEVEL_04 # N-D labeled arrays and datasets in Python
 zstd==1.5.1.0 # LEVEL_01 # ZSTD Bindings for Python
@@ -1066,7 +1066,7 @@ cwcwidth==0.1.6 # LEVEL_01 # Python bindings for wc(s)width
 waitress==2.0.0 # LEVEL_01 # Waitress WSGI server
 boltons==21.0.0 # LEVEL_01 # When they're not builtins, they're boltons
 ffmpy==0.3.0 # LEVEL_01 # A simple Python wrapper for ffmpeg
-humanize==3.13.1 # LEVEL_01 # Python humanize utilities
+humanize==3.14.0 # LEVEL_01 # Python humanize utilities
 pydub==0.25.1 # LEVEL_01 # Manipulate audio with an simple and easy high level interface
 more-itertools==8.12.0 # LEVEL_01 # More routines for operating on iterables, beyond itertools
 #
